samples/AuthenticationAndAuthorization/ExtAuthz-Envoyfilter/envoyfilter-ext-authz-httpservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: httpbin
  namespace: foo
spec:
  workloadSelector:
    labels:
      app: httpbin
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: "envoy.ext_authz"
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
          failure_mode_allow: false
          allowed_headers:
            patterns:
            - exact: baz
            - exact: x-ext-authz          
          transport_api_version: V3
          http_service:
            server_uri:
              cluster: outbound|8000||ext-authz.foo.svc.cluster.local
              timeout: 10s
              uri: http://ext-authz.foo.svc.cluster.local:8000/              
            authorization_response:
              allowed_upstream_headers:
                patterns:
                - exact: "abc"
